# hopsy

./: .check_version.py  .commit  .gitignore  .gitlab-ci.yml  .gitmodules  .makedocstrbadge.py  .pre-commit-config.yaml  .version  CHANGELOG.md  CLA.md  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  hopsy-pub-examples.yml  install_hopsy.ps1  mac_makewheels.sh  makewheels.sh  problem.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stepsize-tuning.ipynb  win_makewheels.sh  win_testwheels.sh
.github/workflows/: build-wheels.yml  ci.yml  lint.yml  pipeline.yml
docs/: .buildinfo  Data.html  Data.rst  FirstSteps.html  Makefile  Model.html  Model.rst  Problem.html  Problem.rst  Proposal.html  Proposal.rst  Run.html  Run.rst  conf.py  docov.txt  examples.html  examples.rst  firststeps.html  firststeps.rst  genindex.html  hopsy.rst  index.html  index.rst  objects.inv  reference.html  reference.rst  search.html  searchindex.js  userguide.html  userguide.rst  zreference.html  zreference.rst
docs-sources/: FirstSteps.ipynb  Makefile  Run.rst  conf.py  examples.rst  firststeps.rst  index.rst  zreference.rst
docs-sources/_static/: style.css
docs-sources/_templates/autosummary/: class.rst  random_class.rst
docs-sources/firststeps/: installation.rst
docs-sources/userguide/: problem.rst  sampling.rst
docs/.doctrees/: FirstSteps.doctree  examples.doctree  index.doctree  userguide.doctree  zreference.doctree
docs/.doctrees/nbsphinx/notebooks/: BirkhoffPolytope.ipynb  ConstrainedSampling.ipynb  EqualityConstraints.ipynb  (+1 more)
docs/.doctrees/notebooks/: BenchmarkingMultiphaseMonteCarloSampling.doctree  BirkhoffPolytope.doctree  CheckIfPolytopeIsEmpty.doctree  ConstrainedSampling.doctree  EqualityConstraints.doctree  FirstSteps.doctree  MultiphaseMonteCarlo.doctree  ParallelTemperingMultiprocessing.doctree  QuickTutorial.doctree  SamplingAdvice.doctree  SamplingGenomeScaleModelsUniformly.doctree  TruncatedGaussianProposal.doctree  eval_pt_samples.doctree
docs/.doctrees/userguide/: postprocessing.doctree  problem.doctree  sampling.doctree  tuning.doctree
docs/_sources/: Model.rst.txt  Problem.rst.txt  Proposal.rst.txt  examples.rst.txt  index.rst.txt  zreference.rst.txt
docs/_sources/firststeps/: introduction.rst.txt
docs/_sources/notebooks/: BenchmarkingMultiphaseMonteCarloSampling.ipynb.txt  BirkhoffPolytope.ipynb.txt  Callbacks.ipynb.txt  ParallelTempering.ipynb.txt
docs/_sources/userguide/: postprocessing.rst.txt  tuning.rst.txt
docs/_static/: documentation_options.js
docs/_templates/autosummary/: class.rst
docs/firststeps/: installation.html  introduction.html  introduction.rst
docs/notebooks/: BenchmarkParallelSampling.html  BenchmarkingMultiphaseMonteCarloSampling.html  BenchmarkingMultiphaseMonteCarloSampling.ipynb  BirkhoffPolytope.html  BirkhoffPolytope.ipynb  Callbacks.html  CheckIfPolytopeIsEmpty.html  ConstrainedSampling.html  ESSTrap.html  ESSTrap.ipynb  EqualityConstraints.html  EqualityConstraints.ipynb  FirstSteps.html  MultiphaseMonteCarlo.html  ParallelTempering.html  ParallelTempering.ipynb  ParallelTemperingMPI.html  ParallelTemperingMultiprocessing.html  PyProposal.html  PyProposal.ipynb  QuickTutorial.html  QuickTutorial.ipynb  SamplingAdvice.html  SamplingAdvice.ipynb  SamplingGenomeScaleModelsUniformly.html  TruncatedGaussianProposal.html  eval_pt_samples.html  eval_pt_samples.ipynb  eval_zamboni_pt_samples.html  eval_zamboni_pt_samples.ipynb
docs/userguide/: postprocessing.html  problem.html  problem.rst  sampling.html  sampling.rst  tuning.html
examples/: BenchmarkParallelSampling.ipynb  Benchmarking Multiphase Monte Carlo Sampling.ipynb  Benchmarking Multiphase Monte Carlo Sampling.py  BenchmarkingMultiphaseMonteCarloSampling.ipynb  BenchmarkingMultiphaseMonteCarloSampling.py  CMakeLists.txt  CSmMALA_test.py  Callbacks.ipynb  CheckIfPolytopeIsEmpty.ipynb  ConstrainedSampling.ipynb  EqualityConstraints.ipynb  FirstSteps.ipynb  Makefile  MultiphaseMonteCarlo.ipynb  ParallelTemperingMPI.ipynb  ParallelTemperingMultiprocessing.ipynb  ParallelTemperingMultiprocessing.py  QuickTutorial.ipynb  SamplingAdvice.ipynb  SamplingAdvice.py  SamplingGenomeScaleModelsUniformly.ipynb  TruncatedGaussianProposal.ipynb  adaptive_pyproposal_test.py  box_constraints_test.py  custom_models.py  data_test.py  dev.py  eval_pt_samples.ipynb  eval_zamboni_pt_samples.ipynb  hopsy-pub-examples.ipynb  hopsy-pub-examples.yml  linprog_test.py  magentic_filaments_example.py  parallel_tempering.py  parallel_tempering_MPI.py  parallel_tempering_multiprocessing.ipynb  parallel_tempering_multiprocessing.py  pymodel_test.py  pyproposal_test.py  python_cpp_proposal_benchmark.py  (+7 more)
install-examples/: Dockerfile-archlinux  quick-hopsy-test.py
src/: hopsy.cpp  hopsy.hpp  hopsy_linprog.hpp  main.cpp
src/hopsy/: CMakeLists.txt  KL_divergence.py  __init__.py  _polyround_backend.py  annealing.py  backend.py  callback.py  definitions.py  doc.cpp  doc.hpp  examples.py  hopsy.cpp  hopsy.hpp  hopsy_linprog.hpp  lp.py  markovchain.hpp  misc.hpp  misc.py  model.hpp  problem.hpp  proposal.cpp  proposal.hpp  random.hpp  setup.py  test.py  transformation.hpp  tuning.hpp  tuning.py  util.py  volume.py
src/hopsy/_polyround/: __init__.py  api.py  default_settings.py  settings.py
src/hopsy/gpu/: CMakeLists.txt  chr.cu  chr.cuh  cublaswrapper.h  cudawrappers.h  curandwrapper.h  device_utils.cu  device_utils.h  dmatrix.cu  dmatrix.h  dvector.cu  dvector.cuh  dvector.h  gpu_wrapper.hpp  gpusamplers.h  helper.h  mhar.cu  mhar.cuh  rhat.cu  rhat.cuh
src/hopsy/tests/: __init__.py  doc.py  markovchain.py  misc.py  model.py  problem.py  proposal.py  random.py  testcase.py  tuning.py
tests/: CMakeLists.txt  __init__.py  __main__.py  adaptive_pyproposal_test.py  annealing.py  backend.py  doc.py  examples.py  gm_toy_problem_generator.py  linprog_test.py  lp.py  markovchain.py  misc.py  model.py  parallel_tempering.py  polyround.py  problem.py  proposal.py  pymodel_test.py  pyproposal_test.py  random.py  test.py  tuning.py  volume.py
(+9 files in other folders)
