[build-system]
requires = [
	"scikit-build-core>=0.10",
	"setuptools_scm>=8",
	"pybind11"
	]
build-backend = "scikit_build_core.build"

[project]
name = "hopsy"
dynamic = ["version"]
description = "A python interface for hops, the highly optimized polytope sampling toolbox."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
	{name = "Richard D. Paul", email = "r.paul@fz-juelich.de"},
	{name = "Johann Fredrik Jadebeck", email = "j.jadebeck@fz-juelich.de"},
]
requires-python = ">=3.10"
dependencies = [
    "PolyRound>=0.4.0",
    "optlang>=1.7.0",
    "arviz",
    "numpy",
    "pandas",
    "tqdm",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
extra = [
    "gurobipy>=13.0.0",
]

[dependency-groups]
dev = [
    "docov",
    "pre-commit",
    "build",
    "twine",
]

[tool.scikit-build]
cmake.args = ["-DPython_FIND_STRATEGY=LOCATION"]
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/hopsy/_version.py"]


[tool.setuptools_scm]
version_file = "src/hopsy/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]
ignore = ["E203", "E231", "E501", "W503"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["ALL"]
